--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.110.0
-uvicorn==0.27.1
-mysql-connector-python==8.3.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-PyMuPDF==1.23.26
-python-multipart==0.0.9
+fastapi
+uvicorn
+mysql-connector-python
+python-jose[cryptography]
+passlib[bcrypt]
+PyMuPDF
+python-multipart
